--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "expo-image-picker": "~16.1.2",
     "expo-linking": "~7.1.2",
     "expo-location": "~18.1.2",
+    "expo-media-library": "~17.1.7",
     "expo-router": "~5.1.0",
     "expo-secure-store": "~14.2.1",
     "expo-sharing": "~13.1.3",
