--- a/apps/betterangels/.maestro/landing.yml
+++ b/apps/betterangels/.maestro/landing.yml
@@ -2,17 +2,21 @@ appId: la.betterangels.dev.app
 platform: ${MAESTRO_PLATFORM}
 ---
 - openLink: exp+betterangels://expo-development-client/?url=https://u.expo.dev/${MAESTRO_PROJECT_ID}/group/${MAESTRO_GROUP_ID}?platform=${MAESTRO_PLATFORM}&dev=true&minify=false&disableOnboarding=1
+
+- runFlow:
+    when:
+      platform: ios
+      visible: 'Open'
+    commands:
+      - tapOn: 'Open'
 # - runFlow:
 #     when:
-#       visible: 'Open'
-#     commands:
-#       - tapOn: 'Open'
-# - runFlow:
-#     when:
+#       platform: ios
 #       visible: 'Continue'
 #     commands:
 #       - tapOn:
 #           point: 50%,10%
+
 - assertVisible: 'Get Started'
 - tapOn: 'Get Started'
 - assertVisible: 'Welcome!'
