Location Tab drawer behavior (DEV-1730) (#1389)
* bottomsheet modal

* bottomsheetmodal component

* Update schema

* BottomSheetModal update

---------

Co-authored-by: Paul Vecchio <paul@betterangels.la>

--- a/apps/betterangels/package.json
+++ b/apps/betterangels/package.json
@@ -74,6 +74,7 @@
     "react-native-open-maps": "*",
     "expo-dev-client": "*",
     "validator": "*",
+    "@gorhom/bottom-sheet": "*",
     "supercluster": "*"
   },
   "scripts": {
