--- a/apps/betterangels/.maestro/landing.yml
+++ b/apps/betterangels/.maestro/landing.yml
@@ -1,7 +1,7 @@
 appId: la.betterangels.dev.app
 platform: ${MAESTRO_PLATFORM}
 ---
-- openLink: exp+betterangels://expo-development-client/?url=https://u.expo.dev/${MAESTRO_PROJECT_ID}/group/${MAESTRO_GROUP_ID}?platform=${MAESTRO_PLATFORM}&dev=true&minify=false&disableOnboarding=1
+- openLink: betterangels-dev://expo-development-client/?url=https://u.expo.dev/${MAESTRO_PROJECT_ID}/group/${MAESTRO_GROUP_ID}?platform=${MAESTRO_PLATFORM}
 
 - runFlow:
     when:
@@ -18,5 +18,7 @@ platform: ${MAESTRO_PLATFORM}
           point: 50%,10%
 
 - assertVisible: 'Get Started'
-- tapOn: 'Get Started'
+- tapOn:
+    id: 'get-started-button'
+
 - assertVisible: 'Welcome!'
