--- a/apps/betterangels/.maestro/landing.yml
+++ b/apps/betterangels/.maestro/landing.yml
@@ -1,7 +1,7 @@
 appId: la.betterangels.dev.app
 platform: ${MAESTRO_PLATFORM}
 ---
-- openLink: exp+betterangels://expo-development-client/?url=https://u.expo.dev/${MAESTRO_PROJECT_ID}/group/${MAESTRO_GROUP_ID}?platform=${MAESTRO_PLATFORM}
+- openLink: exp+betterangels://expo-development-client/?url=https://u.expo.dev/${MAESTRO_PROJECT_ID}/group/${MAESTRO_GROUP_ID}?platform=${MAESTRO_PLATFORM}&disableOnboarding=1
 
 - runFlow:
     when:
