add e2e smoke test (DEV-980) (#1352)
* add eascli

* add maestro to Dockerfile

* add maestro flow

* wip ios wf

* add github workflow; move .eas to root

* ug

* here

* there

* add projectRoot

* run workflow with full path

* once more with feeling

* all together now

* yarn.lock

* set app dir in expo github integration

* remove bad vars

* wip move to bae2e

* the other way

* fix path

* delete empty app.json

* working-directory betterangels-e2e

* dont use betterangels-e2e yet

* working-directory betterangels

* replace previously removed simulator step

* use simulator step id instead of preview step

* add android

* remove on from eas workflow

* add android maestro flow

* fix flow paths

* try build link instead of build id

* use workflow dispatch

* pass workflow dispatch via env

* typo

* have i already tried this

* remove unnecessary arg

* uh where id go

* update workflows

* update ios flow start

* use project_id & group_id vars in maestro flow

* move tests after eas update; replace build-id w runtime-version

* fix eas workflows

* fix maestro flows

* maybe this fix

* oh, this rake again

* now with fewer typos

* humor me

* no env in flow

* no quotes

* braces

* maestro_

* no bad ideas at this point

* ugh

* try env

* typos

* again

* maestro vars in workflow

* maybe

* fix ios workflow

* vars

* fix flow vars

* add back MAESTRO_

* try dif ios v android

* remove env from android workflow

* pass all the way down

* update env file

* u no hash

* maestro_

* fix set group id

* what this do

* write group id in update step

* declare env in workflow

* but will it blend

* or this

* fix job type

* update workflows

* just print

* print more

* again

* marco

* polo

* add set group id step

* are you null

* are you in env

* wip print .env group_id

* are you in the next step

* working directory

* but correctly

* move to separate step

* dont check env

* check env pwd

* no working directory on tests

* write and

--- a/.github/workflows/eas.yml
+++ b/.github/workflows/eas.yml
@@ -147,6 +147,11 @@ jobs:
           slug: ${{ steps.preview-build.outputs.slug }}
           project-id: ${{ steps.preview-build.outputs.project-id }}
 
+      - name: 🧪 Run E2E Tests
+        working-directory: apps/${{ matrix.project }}
+        run: |
+          eas workflow:run .eas/workflows/e2e-test.yml --non-interactive
+
       - name: 📝 Comment on PR
         if: github.event_name == 'pull_request'
         uses: edumserrano/find-create-or-update-comment@v3
