--- a/.github/actions/expo-update/action.yml
+++ b/.github/actions/expo-update/action.yml
@@ -52,6 +52,9 @@ outputs:
   ios-runtime-version:
     description: 'Runtime version for iOS update.'
     value: ${{ steps.perform-eas-update.outputs.ios-runtime-version }}
+  group-id:
+    description: 'EAS Update Group ID'
+    value: ${{ steps.perform-eas-update.outputs.group-id }}
 
 runs:
   using: 'composite'
@@ -87,5 +90,15 @@ runs:
           echo "${platform}-update-qr-url=$update_qr_url" >> $GITHUB_OUTPUT
           echo "${platform}-update-commit=$update_commit" >> $GITHUB_OUTPUT
           echo "${platform}-runtime-version=$runtime_version" >> $GITHUB_OUTPUT
+          echo "group-id=$group_id" >> $GITHUB_OUTPUT
         done
       shell: bash
+
+    - name: Set Project and Group ID
+      run: |
+        project_id="${{ inputs.project-id }}"
+        group_id="${{ steps.perform-eas-update.outputs.group-id }}"
+        echo "PROJECT_ID=$project_id" >> .env
+        echo "GROUP_ID=$group_id" >> .env
+      shell: bash
+      working-directory: apps/${{ inputs.project }}
