--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "react-native-modal": "^14.0.0-rc.1",
     "react-native-open-maps": "^0.4.3",
     "react-native-paper": "^5.12.5",
+    "react-native-paper-dates": "^0.22.47",
     "react-native-pdf": "^6.7.7",
     "react-native-reanimated": "~3.17.5",
     "react-native-safe-area-context": "5.4.0",
