--- a/package.json
+++ b/package.json
@@ -84,7 +84,7 @@
     "react-native-svg-transformer": "1.5.0",
     "react-native-walkthrough-tooltip": "^1.6.0",
     "react-native-web": "^0.20.0",
-    "react-router-dom": "6.11.2",
+    "react-router-dom": "6.29.0",
     "remeda": "^2.20.0",
     "supercluster": "^8.0.1",
     "tailwind-merge": "^2.5.5",
@@ -105,17 +105,20 @@
     "@iarna/toml": "^2.2.5",
     "@nx-tools/container-metadata": "^6.1.1",
     "@nx-tools/nx-container": "6.2.0",
+    "@nx/devkit": "21.1.2",
     "@nx/eslint": "21.1.2",
     "@nx/eslint-plugin": "21.1.2",
     "@nx/expo": "21.1.2",
     "@nx/jest": "21.1.2",
     "@nx/js": "21.1.2",
+    "@nx/playwright": "21.1.2",
     "@nx/react": "21.1.2",
     "@nx/storybook": "21.1.2",
     "@nx/vite": "21.1.2",
     "@nx/web": "21.1.2",
     "@nx/workspace": "21.1.2",
     "@nxlv/python": "21.0.0",
+    "@playwright/test": "^1.36.0",
     "@storybook/addon-essentials": "8.6.12",
     "@storybook/addon-react-native-web": "^0.0.29",
     "@storybook/core-server": "8.6.12",
@@ -134,7 +137,7 @@
     "@types/apollo-upload-client": "^18.0.0",
     "@types/google.maps": "^3.58.1",
     "@types/jest": "29.5.14",
-    "@types/node": "18.19.14",
+    "@types/node": "^20.0.0",
     "@types/react": "~19.0.10",
     "@types/react-dom": "~19.0.1",
     "@types/react-mailchimp-subscribe": "^2.1.4",
@@ -152,10 +155,11 @@
     "core-js": "3.36.1",
     "eslint": "8.57.0",
     "eslint-config-prettier": "10.1.1",
-    "eslint-plugin-import": "2.27.5",
-    "eslint-plugin-jsx-a11y": "6.7.1",
-    "eslint-plugin-react": "7.32.2",
-    "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-import": "2.31.0",
+    "eslint-plugin-jsx-a11y": "6.10.1",
+    "eslint-plugin-playwright": "^1.6.2",
+    "eslint-plugin-react": "7.35.0",
+    "eslint-plugin-react-hooks": "5.0.0",
     "eslint-plugin-react-native-a11y": "^3.3.0",
     "jest": "29.7.0",
     "jest-circus": "^29.4.1",
