--- a/apps/wildfires/package.json
+++ b/apps/wildfires/package.json
@@ -28,7 +28,9 @@
     "@nx/react": "*",
     "@nx/vite": "*",
     "@vitejs/plugin-react": "*",
-    "vite": "*"
+    "vite": "*",
+    "react-fast-compare": "*",
+    "react-native": "*"
   },
   "devDependencies": {}
 }
