--- a/apps/betterangels-admin-e2e/project.json
+++ b/apps/betterangels-admin-e2e/project.json
@@ -1,8 +1,8 @@
 {
   "name": "betterangels-admin-e2e",
-  "$schema": "../node_modules/nx/schemas/project-schema.json",
+  "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "projectType": "application",
-  "sourceRoot": "betterangels-admin-e2e/src",
+  "sourceRoot": "apps/betterangels-admin-e2e/src",
   "tags": [],
   "implicitDependencies": ["betterangels-admin"],
   "// targets": "to see all targets run: nx show project betterangels-admin-e2e --web",
