--- a/apps/betterangels-admin/project.json
+++ b/apps/betterangels-admin/project.json
@@ -1,7 +1,7 @@
 {
   "name": "betterangels-admin",
-  "$schema": "../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "betterangels-admin/src",
+  "$schema": "../../node_modules/nx/schemas/project-schema.json",
+  "sourceRoot": "apps/betterangels-admin/src",
   "projectType": "application",
   "tags": [],
   "targets": {
@@ -9,7 +9,7 @@
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "betterangels-admin/jest.config.ts"
+        "jestConfig": "apps/betterangels-admin/jest.config.ts"
       }
     }
   }
