--- a/apps/betterangels/package.json
+++ b/apps/betterangels/package.json
@@ -77,7 +77,8 @@
     "@gorhom/bottom-sheet": "*",
     "supercluster": "*",
     "react-native-paper-dates": "*",
-    "use-deep-compare-effect": "*"
+    "use-deep-compare-effect": "*",
+    "jotai": "*"
   },
   "scripts": {
     "eas-build-pre-install": "corepack enable && mkdir -p .yarn && cp -R ../../.yarn/patches .yarn/patches 2>/dev/null || :",
