date picker (DEV-1722) (#1439)
* date picker

* paper provider

* date picker under one component

* lint fix

--- a/apps/betterangels/package.json
+++ b/apps/betterangels/package.json
@@ -76,6 +76,7 @@
     "validator": "*",
     "@gorhom/bottom-sheet": "*",
     "supercluster": "*",
+    "react-native-paper-dates": "*",
     "use-deep-compare-effect": "*"
   },
   "scripts": {
