--- a/libs/react/betterangels-admin/project.json
+++ b/libs/react/betterangels-admin/project.json
@@ -1,7 +1,7 @@
 {
-  "name": "ba-admin",
+  "name": "react-betterangels-admin",
   "$schema": "../../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "libs/react/ba-admin/src",
+  "sourceRoot": "libs/react/betterangels-admin/src",
   "projectType": "library",
   "tags": [],
   "namedInputs": {
@@ -14,11 +14,11 @@
     "generate-graphql-types": {
       "executor": "nx:run-commands",
       "options": {
-        "cwd": "libs/react/ba-admin",
+        "cwd": "libs/react/betterangels-admin",
         "command": "graphql-codegen --config codegen.ts"
       },
       "outputs": [
-        "{workspaceRoot}/libs/react/ba-admin/src/lib/**/__generated__/"
+        "{workspaceRoot}/libs/react/betterangels-admin/src/lib/**/__generated__/"
       ]
     }
   }
