--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "validator": "^13.15.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.5",
     "@babel/preset-env": "^7.26.0",
     "@babel/preset-react": "^7.26.3",
     "@chromatic-com/storybook": "^3",
