try flashlist for flatlist

--- a/apps/betterangels/package.json
+++ b/apps/betterangels/package.json
@@ -78,7 +78,8 @@
     "supercluster": "*",
     "react-native-paper-dates": "*",
     "use-deep-compare-effect": "*",
-    "jotai": "*"
+    "jotai": "*",
+    "@shopify/flash-list": "*"
   },
   "scripts": {
     "eas-build-pre-install": "corepack enable && mkdir -p .yarn && cp -R ../../.yarn/patches .yarn/patches 2>/dev/null || :",
