--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@react-native-cookies/cookies": "^6.2.1",
     "@react-native-picker/picker": "2.11.0",
     "@sanity/client": "^6.27.1",
+    "@shopify/flash-list": "1.7.6",
     "@tanstack/react-query": "^5.64.2",
     "@teovilla/react-native-web-maps": "^0.9.5",
     "@types/validator": "^13.15.0",
