--- a/package.json
+++ b/package.json
@@ -158,6 +158,7 @@
     "babel-preset-expo": "~13.0.0",
     "babel-preset-vite": "^1.1.3",
     "core-js": "3.36.1",
+    "daisyui": "^5.0.46",
     "eslint": "8.57.0",
     "eslint-config-prettier": "10.1.1",
     "eslint-plugin-import": "2.31.0",
