--- a/libs/expo/shared/ui-components/.eslintrc.json
+++ b/libs/expo/shared/ui-components/.eslintrc.json
@@ -1,5 +1,9 @@
 {
-  "extends": ["plugin:@nx/react", "../../../../.eslintrc.json"],
+  "extends": [
+    "plugin:@nx/react",
+    "../../../../.eslintrc.json",
+    "plugin:storybook/recommended"
+  ],
   "ignorePatterns": [
     "!**/*",
     ".expo",
@@ -10,15 +14,26 @@
   ],
   "overrides": [
     {
-      "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
+      "files": [
+        "*.ts",
+        "*.tsx",
+        "*.js",
+        "*.jsx"
+      ],
       "rules": {}
     },
     {
-      "files": ["*.ts", "*.tsx"],
+      "files": [
+        "*.ts",
+        "*.tsx"
+      ],
       "rules": {}
     },
     {
-      "files": ["*.js", "*.jsx"],
+      "files": [
+        "*.js",
+        "*.jsx"
+      ],
       "rules": {}
     }
   ]
