--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "@likashefqet/react-native-image-zoom": "^4.2.1",
     "@portabletext/react": "^3.2.0",
     "@react-native-async-storage/async-storage": "2.1.2",
-    "@react-native-community/datetimepicker": "8.3.0",
+    "@react-native-community/datetimepicker": "8.4.1",
     "@react-native-cookies/cookies": "^6.2.1",
-    "@react-native-picker/picker": "2.11.0",
+    "@react-native-picker/picker": "2.11.1",
     "@sanity/client": "^6.27.1",
     "@shopify/flash-list": "1.7.6",
     "@tanstack/react-query": "^5.64.2",
@@ -37,26 +37,26 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
-    "expo": "53.0.11",
-    "expo-application": "~6.1.4",
-    "expo-build-properties": "~0.14.4",
-    "expo-camera": "~16.1.8",
-    "expo-clipboard": "~7.1.2",
-    "expo-constants": "~17.1.2",
-    "expo-dev-client": "~5.2.0",
-    "expo-document-picker": "~13.1.3",
-    "expo-font": "~13.3.1",
+    "expo": "53.0.20",
+    "expo-application": "~6.1.5",
+    "expo-build-properties": "~0.14.8",
+    "expo-camera": "~16.1.11",
+    "expo-clipboard": "~7.1.5",
+    "expo-constants": "~17.1.7",
+    "expo-dev-client": "~5.2.4",
+    "expo-document-picker": "~13.1.6",
+    "expo-font": "~13.3.2",
     "expo-image-manipulator": "~13.1.3",
     "expo-image-picker": "~16.1.2",
-    "expo-linking": "~7.1.2",
-    "expo-location": "~18.1.2",
-    "expo-router": "~5.1.0",
+    "expo-linking": "~7.1.7",
+    "expo-location": "~18.1.6",
+    "expo-router": "~5.1.4",
     "expo-secure-store": "~14.2.1",
     "expo-sharing": "~13.1.3",
-    "expo-splash-screen": "~0.30.9",
+    "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.1",
-    "expo-updates": "~0.28.14",
-    "expo-web-browser": "~14.1.4",
+    "expo-updates": "~0.28.17",
+    "expo-web-browser": "~14.2.0",
     "graphql": "^16.9.0",
     "haversine-distance": "^1.2.3",
     "i": "^0.3.7",
@@ -69,7 +69,7 @@
     "react-ga4": "^2.1.0",
     "react-hook-form": "^7.52.1",
     "react-mailchimp-subscribe": "^2.1.3",
-    "react-native": "0.79.3",
+    "react-native": "0.79.5",
     "react-native-blob-util": "^0.21.2",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-keyboard-controller": "^1.13.0",
@@ -89,6 +89,7 @@
     "react-native-web": "^0.20.0",
     "react-router-dom": "6.29.0",
     "remeda": "^2.20.0",
+    "storybook": "9.0.18",
     "stylus": "github:stylus/stylus#0.54.4",
     "supercluster": "^8.0.1",
     "tailwind-merge": "^2.5.5",
@@ -100,7 +101,7 @@
     "@babel/core": "^7.14.5",
     "@babel/preset-env": "^7.26.0",
     "@babel/preset-react": "^7.26.3",
-    "@chromatic-com/storybook": "^3",
+    "@chromatic-com/storybook": "^4.0.1",
     "@expo/metro-runtime": "~5.0.2",
     "@graphql-codegen/cli": "^5.0.2",
     "@graphql-codegen/client-preset": "^4.3.2",
@@ -110,25 +111,24 @@
     "@iarna/toml": "^2.2.5",
     "@nx-tools/container-metadata": "^6.1.1",
     "@nx-tools/nx-container": "6.2.0",
-    "@nx/devkit": "21.1.2",
-    "@nx/eslint": "21.1.2",
-    "@nx/eslint-plugin": "21.1.2",
-    "@nx/expo": "21.1.2",
-    "@nx/jest": "21.1.2",
-    "@nx/js": "21.1.2",
-    "@nx/playwright": "21.1.2",
-    "@nx/react": "21.1.2",
-    "@nx/storybook": "21.1.2",
-    "@nx/vite": "21.1.2",
-    "@nx/web": "21.1.2",
-    "@nx/workspace": "21.1.2",
+    "@nx/devkit": "21.3.8",
+    "@nx/eslint": "21.3.8",
+    "@nx/eslint-plugin": "21.3.8",
+    "@nx/expo": "21.3.8",
+    "@nx/jest": "21.3.8",
+    "@nx/js": "21.3.8",
+    "@nx/playwright": "21.3.8",
+    "@nx/react": "21.3.8",
+    "@nx/storybook": "21.3.8",
+    "@nx/vite": "21.3.8",
+    "@nx/web": "21.3.8",
+    "@nx/workspace": "21.3.8",
     "@nxlv/python": "21.0.0",
     "@playwright/test": "^1.36.0",
-    "@storybook/addon-essentials": "8.6.12",
+    "@storybook/addon-docs": "9.0.18",
     "@storybook/addon-react-native-web": "^0.0.29",
-    "@storybook/core-server": "8.6.12",
-    "@storybook/react-native": "^8.4.2",
-    "@storybook/react-webpack5": "8.6.12",
+    "@storybook/react-native": "^9.0.18",
+    "@storybook/react-webpack5": "9.0.18",
     "@svgr/webpack": "^8.1.0",
     "@swc-node/register": "1.9.2",
     "@swc/cli": "0.6.0",
@@ -141,7 +141,7 @@
     "@testing-library/react-native": "13.2.0",
     "@types/apollo-upload-client": "^18.0.0",
     "@types/google.maps": "^3.58.1",
-    "@types/jest": "29.5.14",
+    "@types/jest": "30.0.0",
     "@types/node": "^20.0.0",
     "@types/react": "~19.0.10",
     "@types/react-dom": "~19.0.1",
@@ -153,7 +153,7 @@
     "@vitest/ui": "^1.3.1",
     "@yarnpkg/sdks": "^3.0.0-rc.48",
     "autoprefixer": "10.4.13",
-    "babel-jest": "29.7.0",
+    "babel-jest": "30.0.5",
     "babel-plugin-react-native-web": "^0.19.8",
     "babel-preset-expo": "~13.0.0",
     "babel-preset-vite": "^1.1.3",
@@ -167,22 +167,24 @@
     "eslint-plugin-react": "7.35.0",
     "eslint-plugin-react-hooks": "5.0.0",
     "eslint-plugin-react-native-a11y": "^3.3.0",
-    "jest": "29.7.0",
+    "eslint-plugin-storybook": "9.0.18",
+    "jest": "~29.7.0",
     "jest-circus": "^29.4.1",
-    "jest-environment-jsdom": "29.7.0",
+    "jest-environment-jsdom": "30.0.5",
     "jest-environment-node": "^29.4.1",
-    "jest-expo": "~53.0.7",
+    "jest-expo": "~53.0.9",
+    "jest-util": "30.0.5",
     "jiti": "2.4.2",
     "jsdom": "~22.1.0",
     "metro": "^0.82.0",
     "metro-react-native-babel-transformer": "^0.77.0",
-    "nx": "21.1.2",
+    "nx": "21.3.8",
     "nx-cloud": "19.1.0",
     "postcss": "8.4.38",
     "prettier": "^2.6.2",
     "tailwind-merge": "^2.5.5",
     "tailwindcss": "3.4.17",
-    "ts-jest": "^29.1.0",
+    "ts-jest": "29.4.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
     "typescript": "~5.8.3",
