Fix sprinto vulnerbilities (#1478)
* admin portal login (DEV-1903) (#1459)

* user provider

* use user hook

* apollo provider

* api config provider

* authProvider

* safe/unsafe routes. updated provider

* remove console.log

* simple api config provider

* rename env

* removed test

* shared lib

* sign out (#1462)

* setIsLoading in finally

* custom stylus

* yarn

* replace FlatList with FlashList in ClientProfileList (DEV-1998) (#1464)

* try flashlist for flatlist

* use FlashList with ClientProfileList

* update layout for FlashLis

* bump app.config.js versions

* daisy setup with tw and add fonts (#1470)

* daisy stup with tw and add fonts

* remove daisy plugin import from css

* lint fix

* Fix Django Postoffice Email Lock (#1469)

* custom lock and override postoffice emailer

* Remove file name

* Add tests and simplify decorator

* Remove unused import

* Don't need type ignore

* add invite org member endpoint (DEV-1928) (#1466)

* add view members permission

* update permission signal

* add queries

* return role

* move annotation to query resolver

* add memberRole to member query

* fix type annotation

* clean up

* invite endpoint

* rename user to current_user and undo type change

* clean up

* update mutation; add middle name

* add mutation test

* perm test

* lint

* handle invited member already in org

* Fix production email handler (#1471)

* custom lock and override postoffice emailer

* Remove file name

* Add tests and simplify decorator

* Remove unused import

* Don't need type ignore

* Override queued mail handler

* update celery beat

* Remove name and also clear all signals instead of removing a specific one

* dorpdown component (DEV-2010) (#1474)

* dorpdown component

* small fix

* moved menu css under dropdown component

* postcss config to .ts

* postcss config

* update

* bump python plugins

* bump python packages

* update lockfile

* Update stories

* Add types for uuid

* Bound to less than 0.83.0

* Revert


--- a/nx.json
+++ b/nx.json
@@ -109,7 +109,8 @@
       "options": {
         "targetName": "e2e"
       }
-    }
+    },
+    "@nx/storybook"
   ],
   "generators": {
     "@nx/react": {
@@ -124,8 +125,12 @@
       },
       "library": {
         "style": "tailwind",
-        "linter": "eslint"
+        "linter": "eslint",
+        "unitTestRunner": "none"
       }
     }
+  },
+  "tui": {
+    "enabled": false
   }
 }
