--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "ba": "nx start betterangels",
     "ba:build-dev": "nx build betterangels --profile development",
     "shelter": "nx serve shelter-web --port 8083",
-    "fires": "nx serve wildfires --port 8200"
+    "fires": "nx serve wildfires --port 8200",
+    "admin": "nx serve betterangels-admin --port 8083"
   },
   "dependencies": {
     "@apollo/client": "^3.11.1",
@@ -25,6 +26,7 @@
     "@react-native-cookies/cookies": "^6.2.1",
     "@react-native-picker/picker": "2.11.1",
     "@sanity/client": "^6.27.1",
+    "@shopify/flash-list": "1.7.6",
     "@tanstack/react-query": "^5.64.2",
     "@teovilla/react-native-web-maps": "^0.9.5",
     "@types/validator": "^13.15.0",
@@ -87,6 +89,7 @@
     "react-native-web": "^0.20.0",
     "react-router-dom": "6.29.0",
     "remeda": "^2.20.0",
+    "stylus": "github:stylus/stylus#0.54.4",
     "supercluster": "^8.0.1",
     "tailwind-merge": "^2.5.5",
     "tslib": "^2.3.0",
@@ -94,6 +97,7 @@
     "validator": "^13.15.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.5",
     "@babel/preset-env": "^7.26.0",
     "@babel/preset-react": "^7.26.3",
     "@chromatic-com/storybook": "^3",
@@ -154,6 +158,7 @@
     "babel-preset-expo": "~13.0.0",
     "babel-preset-vite": "^1.1.3",
     "core-js": "3.36.1",
+    "daisyui": "^5.0.46",
     "eslint": "8.57.0",
     "eslint-config-prettier": "10.1.1",
     "eslint-plugin-import": "2.31.0",
