--- a/package.json
+++ b/package.json
@@ -193,8 +193,8 @@
   "resolutions": {
     "cookie": ">=0.7.0",
     "cross-spawn": ">=7.0.5",
-    "metro-resolver": ">=0.82.0",
-    "metro-config": ">=0.82.0",
+    "metro-resolver": ">=0.82.0 <0.83.0",
+    "metro-config": ">=0.82.0 <0.83.0",
     "micromatch": ">=4.0.8",
     "ws": ">=8.17.1",
     "@expo/config-plugins": ">=10.0.0"
