--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "@likashefqet/react-native-image-zoom": "^4.2.1",
     "@portabletext/react": "^3.2.0",
     "@react-native-async-storage/async-storage": "2.1.2",
-    "@react-native-community/datetimepicker": "8.3.0",
+    "@react-native-community/datetimepicker": "8.4.1",
     "@react-native-cookies/cookies": "^6.2.1",
-    "@react-native-picker/picker": "2.11.0",
+    "@react-native-picker/picker": "2.11.1",
     "@sanity/client": "^6.27.1",
     "@shopify/flash-list": "1.7.6",
     "@tanstack/react-query": "^5.64.2",
@@ -37,7 +37,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
-    "expo": "53.0.11",
+    "expo": "53.0.20",
     "expo-application": "~6.1.4",
     "expo-build-properties": "~0.14.4",
     "expo-camera": "~16.1.8",
@@ -56,7 +56,7 @@
     "expo-splash-screen": "~0.30.9",
     "expo-status-bar": "~2.2.1",
     "expo-updates": "~0.28.14",
-    "expo-web-browser": "~14.1.4",
+    "expo-web-browser": "~14.2.0",
     "graphql": "^16.9.0",
     "haversine-distance": "^1.2.3",
     "i": "^0.3.7",
@@ -69,7 +69,7 @@
     "react-ga4": "^2.1.0",
     "react-hook-form": "^7.52.1",
     "react-mailchimp-subscribe": "^2.1.3",
-    "react-native": "0.79.3",
+    "react-native": "0.79.5",
     "react-native-blob-util": "^0.21.2",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-keyboard-controller": "^1.13.0",
@@ -110,19 +110,19 @@
     "@iarna/toml": "^2.2.5",
     "@nx-tools/container-metadata": "^6.1.1",
     "@nx-tools/nx-container": "6.2.0",
-    "@nx/devkit": "21.1.2",
-    "@nx/eslint": "21.1.2",
-    "@nx/eslint-plugin": "21.1.2",
-    "@nx/expo": "21.1.2",
-    "@nx/jest": "21.1.2",
-    "@nx/js": "21.1.2",
-    "@nx/playwright": "21.1.2",
-    "@nx/react": "21.1.2",
-    "@nx/storybook": "21.1.2",
-    "@nx/vite": "21.1.2",
-    "@nx/web": "21.1.2",
-    "@nx/workspace": "21.1.2",
-    "@nxlv/python": "21.0.0",
+    "@nx/devkit": "21.1.3",
+    "@nx/eslint": "21.1.3",
+    "@nx/eslint-plugin": "21.1.3",
+    "@nx/expo": "21.1.3",
+    "@nx/jest": "21.1.3",
+    "@nx/js": "21.1.3",
+    "@nx/playwright": "21.1.3",
+    "@nx/react": "21.1.3",
+    "@nx/storybook": "21.1.3",
+    "@nx/vite": "21.1.3",
+    "@nx/web": "21.1.3",
+    "@nx/workspace": "21.1.3",
+    "@nxlv/python": "21.0.4",
     "@playwright/test": "^1.36.0",
     "@storybook/addon-essentials": "8.6.12",
     "@storybook/addon-react-native-web": "^0.0.29",
@@ -176,7 +176,7 @@
     "jsdom": "~22.1.0",
     "metro": "^0.82.0",
     "metro-react-native-babel-transformer": "^0.77.0",
-    "nx": "21.1.2",
+    "nx": "21.1.3",
     "nx-cloud": "19.1.0",
     "postcss": "8.4.38",
     "prettier": "^2.6.2",
@@ -193,8 +193,8 @@
   "resolutions": {
     "cookie": ">=0.7.0",
     "cross-spawn": ">=7.0.5",
-    "metro-resolver": ">=0.82.0",
-    "metro-config": ">=0.82.0",
+    "metro-resolver": ">=0.82.0 <0.83.0",
+    "metro-config": ">=0.82.0 <0.83.0",
     "micromatch": ">=4.0.8",
     "ws": ">=8.17.1",
     "@expo/config-plugins": ">=10.0.0"
