--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "admin": "nx serve betterangels-admin --port 8083"
   },
   "dependencies": {
-    "-": "^0.0.1",
     "@apollo/client": "^3.11.1",
     "@config-plugins/react-native-blob-util": "^9.0.0",
     "@config-plugins/react-native-pdf": "^9.0.0",
@@ -133,6 +132,7 @@
     "@storybook/core-server": "8.6.12",
     "@storybook/react-native": "^8.4.2",
     "@storybook/react-webpack5": "8.6.14",
+    "@storybook/test": "8.6.14",
     "@svgr/webpack": "^8.1.0",
     "@swc-node/register": "1.9.2",
     "@swc/cli": "0.6.0",
@@ -184,6 +184,7 @@
     "nx": "21.1.3",
     "nx-cloud": "19.1.0",
     "postcss": "8.4.38",
+    "postcss-loader": "^8.1.1",
     "prettier": "^2.6.2",
     "tailwind-merge": "^2.5.5",
     "tailwindcss": "3.4.17",
