--- a/package.json
+++ b/package.json
@@ -186,9 +186,11 @@
     "postcss": "8.4.38",
     "postcss-loader": "^8.1.1",
     "prettier": "^2.6.2",
+    "raw-loader": "^4.0.2",
     "tailwind-merge": "^2.5.5",
     "tailwindcss": "3.4.17",
     "ts-jest": "^29.1.0",
+    "ts-loader": "^9.5.2",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
     "typescript": "~5.8.3",
