--- a/libs/react/components/.storybook/tsconfig.json
+++ b/libs/react/components/.storybook/tsconfig.json
@@ -2,7 +2,9 @@
   "extends": "../../../../tsconfig.base.json",
   "compilerOptions": {
     "outDir": "",
-    "types": ["node", "jest"]
+    "types": ["node", "jest"],
+    "jsx": "react-jsx"
   },
+  "include": ["./**/*", "../../**/*.ts", "../../**/*.tsx"],
   "exclude": ["../**/*.spec.ts", "../**/*.test.ts"]
 }
