--- a/libs/react/components/tsconfig.json
+++ b/libs/react/components/tsconfig.json
@@ -12,7 +12,7 @@
     "noFallthroughCasesInSwitch": true
   },
   "files": [],
-  "include": [],
+  "include": ["src"],
   "references": [
     {
       "path": "./tsconfig.lib.json"
