--- a/package.json
+++ b/package.json
@@ -187,6 +187,7 @@
     "postcss-loader": "^8.1.1",
     "prettier": "^2.6.2",
     "raw-loader": "^4.0.2",
+    "storybook-addon-pseudo-states": "4.0.3",
     "tailwind-merge": "^2.5.5",
     "tailwindcss": "3.4.17",
     "ts-jest": "^29.1.0",
