--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "admin": "nx serve betterangels-admin --port 8083"
   },
   "dependencies": {
+    "-": "^0.0.1",
     "@apollo/client": "^3.11.1",
     "@config-plugins/react-native-blob-util": "^9.0.0",
     "@config-plugins/react-native-pdf": "^9.0.0",
@@ -99,9 +100,10 @@
     "zod": "^4.0.14"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.5",
-    "@babel/preset-env": "^7.26.0",
-    "@babel/preset-react": "^7.26.3",
+    "@babel/core": "^7.28.0",
+    "@babel/preset-env": "^7.28.0",
+    "@babel/preset-react": "^7.27.1",
+    "@babel/preset-typescript": "^7.27.1",
     "@chromatic-com/storybook": "^3",
     "@expo/metro-runtime": "~5.0.2",
     "@graphql-codegen/cli": "^5.0.2",
@@ -126,11 +128,11 @@
     "@nx/workspace": "21.1.3",
     "@nxlv/python": "21.0.4",
     "@playwright/test": "^1.36.0",
-    "@storybook/addon-essentials": "8.6.12",
+    "@storybook/addon-essentials": "8.6.14",
     "@storybook/addon-react-native-web": "^0.0.29",
     "@storybook/core-server": "8.6.12",
     "@storybook/react-native": "^8.4.2",
-    "@storybook/react-webpack5": "8.6.12",
+    "@storybook/react-webpack5": "8.6.14",
     "@svgr/webpack": "^8.1.0",
     "@swc-node/register": "1.9.2",
     "@swc/cli": "0.6.0",
@@ -156,6 +158,7 @@
     "@yarnpkg/sdks": "^3.0.0-rc.48",
     "autoprefixer": "10.4.13",
     "babel-jest": "29.7.0",
+    "babel-loader": "^10.0.0",
     "babel-plugin-react-native-web": "^0.19.8",
     "babel-preset-expo": "~13.0.0",
     "babel-preset-vite": "^1.1.3",
