--- a/package.json
+++ b/package.json
@@ -131,6 +131,7 @@
     "@storybook/addon-react-native-web": "^0.0.29",
     "@storybook/core-server": "8.6.12",
     "@storybook/react-native": "^8.4.2",
+    "@storybook/react-vite": "8.6.14",
     "@storybook/react-webpack5": "8.6.14",
     "@storybook/test": "8.6.14",
     "@svgr/webpack": "^8.1.0",
@@ -187,6 +188,7 @@
     "postcss-loader": "^8.1.1",
     "prettier": "^2.6.2",
     "raw-loader": "^4.0.2",
+    "storybook": "8.6.14",
     "storybook-addon-pseudo-states": "4.0.3",
     "tailwind-merge": "^2.5.5",
     "tailwindcss": "3.4.17",
