--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -33,8 +33,8 @@
       ],
       "@monorepo/react/components": ["libs/react/components/src/index.ts"],
       "@monorepo/react/icons": ["libs/react/icons/src/index.ts"],
-      "@monorepo/react/shelter": ["libs/react/shelter/src/index.ts"],
-      "@monorepo/react/shared": ["libs/react/shared/src/index.ts"]
+      "@monorepo/react/shared": ["libs/react/shared/src/index.ts"],
+      "@monorepo/react/shelter": ["libs/react/shelter/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
