--- a/mypy.ini
+++ b/mypy.ini
@@ -35,13 +35,13 @@ django_settings_module = "betterangels_backend.settings"
 ignore_errors = True
 
 # Explicitly Ignore Untyped Libs
-[mypy-allauth.*]
-ignore_missing_imports = True
-
 [mypy-admin_async_upload.*]
 ignore_missing_imports = True
 
-[mypy-environ.*]
+[mypy-adminsortable2.*]
+ignore_missing_imports = True
+
+[mypy-allauth.*]
 ignore_missing_imports = True
 
 [mypy-deepdiff.*]
@@ -54,6 +54,9 @@ ignore_missing_imports = True
 ignore_missing_imports = True
 
 [mypy-django_select2.*]
+ignore_missing_imports = True
+
+[mypy-environ.*]
 ignore_missing_imports = True
 
 [mypy-guardian.*]
@@ -71,10 +74,10 @@ ignore_missing_imports = True
 [mypy-pghistory.*]
 ignore_missing_imports = True
 
-[mypy-places.*]
+[mypy-phonenumber_field.*]
 ignore_missing_imports = True
 
-[mypy-phonenumber_field.*]
+[mypy-places.*]
 ignore_missing_imports = True
 
 [mypy-post_office.*]
