--- a/package.json
+++ b/package.json
@@ -129,6 +129,7 @@
     "@playwright/test": "^1.36.0",
     "@storybook/addon-essentials": "8.6.14",
     "@storybook/addon-react-native-web": "^0.0.29",
+    "@storybook/blocks": "^8.6.14",
     "@storybook/core-server": "8.6.12",
     "@storybook/react-native": "^8.4.2",
     "@storybook/react-vite": "8.6.14",
