migrate to storybook 9 and create storybook-web lib

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -34,7 +34,8 @@
       "@monorepo/react/components": ["libs/react/components/src/index.ts"],
       "@monorepo/react/icons": ["libs/react/icons/src/index.ts"],
       "@monorepo/react/shared": ["libs/react/shared/src/index.ts"],
-      "@monorepo/react/shelter": ["libs/react/shelter/src/index.ts"]
+      "@monorepo/react/shelter": ["libs/react/shelter/src/index.ts"],
+      "@monorepo/storybook-web": ["libs/storybook-web/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
