--- a/libs/react/icons/project.json
+++ b/libs/react/icons/project.json
@@ -5,21 +5,5 @@
   "projectType": "library",
   "tags": [],
   "// targets": "to see all targets run: nx show project react-icons --web",
-  "targets": {
-    "storybook": {
-      "executor": "@nx/storybook:storybook",
-      "options": {
-        "configDir": "libs/react/icons/.storybook",
-        "port": 4400
-      }
-    },
-    "build-storybook": {
-      "executor": "@nx/storybook:build",
-      "outputs": ["{options.outputDir}"],
-      "options": {
-        "configDir": "libs/react/icons/.storybook",
-        "outputDir": "dist/storybook/react-icons"
-      }
-    }
-  }
+  "targets": {}
 }
