--- a/package.json
+++ b/package.json
@@ -103,7 +103,7 @@
     "@babel/preset-env": "^7.28.0",
     "@babel/preset-react": "^7.27.1",
     "@babel/preset-typescript": "^7.27.1",
-    "@chromatic-com/storybook": "^3",
+    "@chromatic-com/storybook": "^4.1.0",
     "@expo/metro-runtime": "~5.0.2",
     "@graphql-codegen/cli": "^5.0.2",
     "@graphql-codegen/client-preset": "^4.3.2",
@@ -118,23 +118,20 @@
     "@nx/eslint-plugin": "21.1.3",
     "@nx/expo": "21.1.3",
     "@nx/jest": "21.1.3",
-    "@nx/js": "21.1.3",
+    "@nx/js": "21.3.11",
     "@nx/playwright": "21.1.3",
     "@nx/react": "21.1.3",
-    "@nx/storybook": "21.1.3",
-    "@nx/vite": "21.1.3",
-    "@nx/web": "21.1.3",
+    "@nx/storybook": "^21.3.11",
+    "@nx/vite": "21.3.11",
+    "@nx/web": "21.3.11",
     "@nx/workspace": "21.1.3",
     "@nxlv/python": "21.0.4",
     "@playwright/test": "^1.36.0",
-    "@storybook/addon-essentials": "8.6.14",
+    "@storybook/addon-docs": "9.1.2",
     "@storybook/addon-react-native-web": "^0.0.29",
-    "@storybook/blocks": "^8.6.14",
-    "@storybook/core-server": "8.6.12",
-    "@storybook/react-native": "^8.4.2",
-    "@storybook/react-vite": "8.6.14",
-    "@storybook/react-webpack5": "8.6.14",
-    "@storybook/test": "8.6.14",
+    "@storybook/react-native": "^9.1.0",
+    "@storybook/react-vite": "9.1.2",
+    "@storybook/react-webpack5": "9.1.2",
     "@svgr/webpack": "^8.1.0",
     "@swc-node/register": "1.9.2",
     "@swc/cli": "0.6.0",
@@ -174,6 +171,7 @@
     "eslint-plugin-react": "7.35.0",
     "eslint-plugin-react-hooks": "5.0.0",
     "eslint-plugin-react-native-a11y": "^3.3.0",
+    "eslint-plugin-storybook": "9.1.2",
     "jest": "29.7.0",
     "jest-circus": "^29.4.1",
     "jest-environment-jsdom": "29.7.0",
@@ -189,8 +187,9 @@
     "postcss-loader": "^8.1.1",
     "prettier": "^2.6.2",
     "raw-loader": "^4.0.2",
-    "storybook": "8.6.14",
-    "storybook-addon-pseudo-states": "4.0.3",
+    "react-docgen-typescript": "^2.4.0",
+    "storybook": "9.1.2",
+    "storybook-addon-pseudo-states": "9.1.2",
     "tailwind-merge": "^2.5.5",
     "tailwindcss": "3.4.17",
     "ts-jest": "^29.1.0",
