render storybook as an app

--- a/libs/react/storybook-web/tsconfig.json
+++ b/libs/react/storybook-web/tsconfig.json
@@ -11,10 +11,7 @@
   "references": [
     {
       "path": "./tsconfig.lib.json"
-    },
-    {
-      "path": "./tsconfig.storybook.json"
     }
   ],
-  "extends": "../../tsconfig.base.json"
+  "extends": "../../../tsconfig.base.json"
 }
