--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "storybook-start": "nx run expo-shared-ui-components:storybook",
     "storybook-build": "nx storybook build expo-shared-ui-components",
-    "storybook-web": "nx storybook storybook-web",
     "server": "nx start betterangels-backend",
     "ba": "nx start betterangels",
     "ba:build-dev": "nx build betterangels --profile development",
@@ -154,6 +153,7 @@
     "@typescript-eslint/eslint-plugin": "7.17.0",
     "@typescript-eslint/parser": "7.17.0",
     "@vitejs/plugin-react": "^4.2.0",
+    "@vitest/coverage-v8": "^1.0.4",
     "@vitest/ui": "^1.3.1",
     "@yarnpkg/sdks": "^3.0.0-rc.48",
     "autoprefixer": "10.4.13",
@@ -191,6 +191,7 @@
     "react-docgen-typescript": "^2.4.0",
     "storybook": "9.1.2",
     "storybook-addon-pseudo-states": "9.1.2",
+    "swc-loader": "0.1.15",
     "tailwind-merge": "^2.5.5",
     "tailwindcss": "3.4.17",
     "ts-jest": "^29.1.0",
