--- a/libs/react/icons/tsconfig.json
+++ b/libs/react/icons/tsconfig.json
@@ -7,13 +7,10 @@
     "strict": true
   },
   "files": [],
-  "include": [],
+  "include": ["src/**/*.ts", "src/**/*.tsx"],
   "references": [
     {
       "path": "./tsconfig.lib.json"
-    },
-    {
-      "path": "./tsconfig.storybook.json"
     }
   ],
   "extends": "../../../tsconfig.base.json"
