--- a/.github/actions/expo-build/action.yml
+++ b/.github/actions/expo-build/action.yml
@@ -87,6 +87,11 @@ runs:
             --runtimeVersion "${{ inputs.runtime-version }}" \
             --limit 1 --json --interactive false 2>/dev/null)
 
+          # Debug print of raw build_output
+          echo "--- RAW build_output for $platform ---"
+          echo "$build_output" | cat -v
+          echo ""
+
           # Extract only the JSON portion (from the first "[" to the last "]").
           cleaned_output=$(echo "$build_output" | sed ':a;N;$!ba;s/.*\(\[[^]]*\]\).*/\1/')
 
