--- a/package.json
+++ b/package.json
@@ -152,6 +152,7 @@
     "@types/react-dom": "~19.0.1",
     "@types/react-mailchimp-subscribe": "^2.1.4",
     "@types/supercluster": "^7.1.3",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "7.17.0",
     "@typescript-eslint/parser": "7.17.0",
     "@vitejs/plugin-react": "^4.2.0",
