--- a/apps/storybook-react/project.json
+++ b/apps/storybook-react/project.json
@@ -1,23 +1,23 @@
 {
-  "name": "storybook-web",
+  "name": "storybook-react",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "projectType": "application",
-  "sourceRoot": "apps/storybook-web/src",
+  "sourceRoot": "apps/storybook-react/src",
   "tags": [],
   "targets": {
     "storybook": {
       "executor": "@nx/storybook:storybook",
       "options": {
-        "configDir": "apps/storybook-web/.storybook",
+        "configDir": "apps/storybook-react/.storybook",
         "port": 4400
       }
     },
     "build": {
       "executor": "@nx/storybook:build",
-      "outputs": ["{workspaceRoot}/dist/apps/storybook-web/storybook-static"],
+      "outputs": ["{workspaceRoot}/dist/apps/storybook-react/storybook-static"],
       "options": {
-        "configDir": "apps/storybook-web/.storybook",
-        "outputDir": "dist/apps/storybook-web/storybook-static"
+        "configDir": "apps/storybook-react/.storybook",
+        "outputDir": "dist/apps/storybook-react/storybook-static"
       }
     }
   }
