--- a/apps/storybook-react/project.json
+++ b/apps/storybook-react/project.json
@@ -19,6 +19,22 @@
         "configDir": "apps/storybook-react/.storybook",
         "outputDir": "dist/apps/storybook-react/storybook-static"
       }
+    },
+    "deploy": {
+      "executor": "nx:run-commands",
+      "options": {
+        "command": "./tools/deploy/cloudfront_deploy.sh"
+      },
+      "configurations": {
+        "preview": {}
+      },
+      "dependsOn": ["build"]
+    },
+    "post-pr-preview": {
+      "executor": "nx:run-commands",
+      "options": {
+        "command": "node tools/scripts/post-preview-comment.js --url=https://admin.dev.betterangels.la$VITE_APP_BASE_PATH"
+      }
     }
   }
 }
