--- a/apps/betterangels-admin/project.json
+++ b/apps/betterangels-admin/project.json
@@ -52,7 +52,7 @@
     "post-pr-preview": {
       "executor": "nx:run-commands",
       "options": {
-        "command": "node tools/scripts/post-preview-comment.js --url=https://strorybook.dev.betterangels.la$VITE_APP_BASE_PATH"
+        "command": "node tools/scripts/post-preview-comment.js --url=https://admin.dev.betterangels.la$VITE_APP_BASE_PATH"
       }
     }
   }
