dynamically inject manger-head.html with base path

--- a/apps/storybook-react/project.json
+++ b/apps/storybook-react/project.json
@@ -15,6 +15,13 @@
         "preview": {}
       }
     },
+    "generate-storybook-head": {
+      "executor": "nx:run-commands",
+      "options": {
+        "command": "node tools/scripts/generate-storybook-head.js"
+      },
+      "dependsOn": ["set-env"]
+    },
     "storybook": {
       "executor": "@nx/storybook:storybook",
       "options": {
@@ -24,7 +31,7 @@
     },
     "build": {
       "executor": "@nx/storybook:build",
-      "dependsOn": ["set-env"],
+      "dependsOn": ["set-env", "generate-storybook-head"],
       "outputs": ["{workspaceRoot}/dist/apps/storybook-react"],
       "options": {
         "configDir": "apps/storybook-react/.storybook",
