create separate apollo lib and update expo ApolloClientProvider

--- a/apps/betterangels/package.json
+++ b/apps/betterangels/package.json
@@ -81,7 +81,11 @@
     "jotai": "*",
     "@shopify/flash-list": "*",
     "@hookform/resolvers": "*",
-    "zod": "*"
+    "zod": "*",
+    "@swc/helpers": "*",
+    "graphql": "*",
+    "vite": "*",
+    "@nx/vite": "*"
   },
   "scripts": {
     "eas-build-pre-install": "corepack enable && mkdir -p .yarn && cp -R ../../.yarn/patches .yarn/patches 2>/dev/null || :",
