replace package.json

--- a/apps/betterangels/package.json
+++ b/apps/betterangels/package.json
@@ -85,8 +85,7 @@
     "@swc/helpers": "*",
     "graphql": "*",
     "vite": "*",
-    "@nx/vite": "*",
-    "vitest": "*"
+    "@nx/vite": "*"
   },
   "scripts": {
     "eas-build-pre-install": "corepack enable && mkdir -p .yarn && cp -R ../../.yarn/patches .yarn/patches 2>/dev/null || :",
