use env var for gql debu logger

--- a/apps/betterangels/.env.local.sample
+++ b/apps/betterangels/.env.local.sample
@@ -1,2 +1,3 @@
 EXPO_PUBLIC_API_URL=http://localhost:8000
 EXPO_PUBLIC_DEMO_API_URL=http://localhost:8000
+EXPO_PUBLIC_GQL_DEBUG=true # turns on apollo client query loggin
