Patch PDF viewer

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@react-native-cookies/cookies": "^6.2.1",
     "@react-native-picker/picker": "2.11.1",
     "@sanity/client": "^6.27.1",
-    "@shopify/flash-list": "2.0.3",
+    "@shopify/flash-list": "2.0.2",
     "@tanstack/react-query": "^5.64.2",
     "@teovilla/react-native-web-maps": "^0.9.5",
     "@types/validator": "^13.15.0",
@@ -78,7 +78,7 @@
     "react-native-open-maps": "^0.4.3",
     "react-native-paper": "^5.12.5",
     "react-native-paper-dates": "^0.22.47",
-    "react-native-pdf": "^6.7.7",
+    "react-native-pdf": "patch:react-native-pdf@npm%3A6.7.7#~/.yarn/patches/react-native-pdf-npm-6.7.7-7aa1e3a631.patch",
     "react-native-reanimated": "~4.1.0",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
