--- a/apps/betterangels/package.json
+++ b/apps/betterangels/package.json
@@ -88,7 +88,10 @@
     "@nx/vite": "*",
     "ts-essentials": "*",
     "vitest": "*",
-    "@storybook/react-native-web-vite": "*"
+    "@storybook/react-native-web-vite": "*",
+    "@nx/detox": "*",
+    "@nx/rollup": "*",
+    "@types/geojson": "*"
   },
   "scripts": {
     "eas-build-pre-install": "corepack enable && mkdir -p .yarn && cp -R ../../.yarn/patches .yarn/patches 2>/dev/null || :",
