--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "expo-camera": "~17.0.8",
     "expo-clipboard": "~8.0.7",
     "expo-constants": "~18.0.9",
+    "expo-crypto": "~15.0.7",
     "expo-dev-client": "~6.0.12",
     "expo-document-picker": "~14.0.7",
     "expo-font": "~14.0.8",
