--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "expo-dev-client": "~6.0.13",
     "expo-document-picker": "~14.0.7",
     "expo-font": "~14.0.8",
+    "expo-image": "~3.0.9",
     "expo-image-manipulator": "~14.0.7",
     "expo-image-picker": "~17.0.8",
     "expo-linking": "~8.0.8",
