--- a/apps/betterangels/package.json
+++ b/apps/betterangels/package.json
@@ -91,7 +91,8 @@
     "@nx/detox": "*",
     "@nx/rollup": "*",
     "@types/geojson": "*",
-    "expo-crypto": "*"
+    "expo-crypto": "*",
+    "expo-image": "*"
   },
   "scripts": {
     "eas-build-pre-install": "corepack enable && mkdir -p .yarn && cp -R ../../.yarn/patches .yarn/patches 2>/dev/null || :",
