--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,3 +6,10 @@ repos:
         entry: bash -c '! find apps -type d -name cassettes -exec grep -RIEi "authorization|x-api-key|uri|Bearer|token\\s+[A-Za-z0-9._-]+" {} +'
         language: system
         pass_filenames: false
+
+      - id: forbid-vcr-usage
+        name: Forbid @vcr usage
+        entry: bash -c 'if git diff --cached --name-only | grep -E "\.py$" | xargs grep -n "@vcr" --color=never --with-filename; then echo "❌ Found @vcr decorator — use scrubbed_vcr instead."; exit 1; fi'
+        language: system
+        types: [python]
+        pass_filenames: false
